Final push before submission, see you in space cowboy 🫡

--- a/web-page/map.html
+++ b/web-page/map.html
@@ -40,7 +40,12 @@
             <div id="legend">
                 <h2>Legend</h2>
                 <ul>
-                    <li><span class="legend-color" style="background-color: #ffa6a6;"></span>Meeting</li>
+                    <li><span class="legend-color" style="background-color: #212121;"></span>Road</li>
+                    <li><span class="legend-color" style="background-color: #657182;"></span>Building</li>
+                    <li><span class="legend-color" style="background-color: #225b99;"></span>Available Block</li>
+                    <li><span class="legend-color" style="background-color: #e33434;"></span>Selected Block</li>
+                    <li><span class="legend-color" style="background-color: #34c0e3;"></span>Building Envelope</li>
+                    <li><span class="legend-color" style="background-color: #39e385;"></span>Walkable Radius</li>
                 </ul>
             </div>
             <div id="viewer"></div>
@@ -79,14 +84,17 @@
                     <div class="analysis-item">
                         <span class="analysis-label">Mean Walk Score:</span>
                         <span class="analysis-value" id="meanWalkScore">0</span>
+                        <a href="https://www.walkscore.com/" target="_blank">Source</a>
                     </div>
                     <div class="analysis-item">
                         <span class="analysis-label">Max Walk Score:</span>
                         <span class="analysis-value" id="maxWalkScore">0</span>
+                        <a href="https://www.walkscore.com/" target="_blank">Source</a>
                     </div>
                     <div class="analysis-item">
                         <span class="analysis-label">Min Walk Score:</span>
                         <span class="analysis-value" id="minWalkScore">0</span>
+                        <a href="https://www.walkscore.com/" target="_blank">Source</a>
                     </div>
                 </section>
             </aside>
